--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-image: url("http://mecollectibles.com/12599-thickbox_default/iran-islam-shia-poster-depicting-the-1st-shia-imam-ali-as.jpg");
+  background-image: url("https://i.ytimg.com/vi/LS1mVsA6SU8/maxresdefault.jpg");
 }
 
 h1 {
