--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-image: url("https://i.ytimg.com/vi/LS1mVsA6SU8/maxresdefault.jpg");
+  background-image: url("chips.gif");
 }
 
 h1 {
