--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body {
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  /*background-image: url("gent.jpg");*/
 }
 
 h1 {
@@ -33,8 +32,7 @@ h1 {
 /******************************************
 * Time
 ********************************************/
-.area {
-  fill: steelblue;
+.line {
   clip-path: url(#clip);
 }
 
