--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ h1 {
 /******************************************
 * Time
 ********************************************/
-.line {
+.line1 {
   clip-path: url(#clip);
 }
 
