--- a/style.css
+++ b/style.css
@@ -32,7 +32,11 @@ h1 {
 /******************************************
 * Time
 ********************************************/
-.line1 {
+.line1MAGA {
+  clip-path: url(#clip);
+}
+
+.line1METOO {
   clip-path: url(#clip);
 }
 
