--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ div.tooltip1 {
     position: absolute;     
     /*text-align: center;     */
     width: 120px;          
-    height: 56px;         
+/*    height: 56px;      */   
     padding: 2px;       
     font: 10px noto;    
     background: red; 
@@ -67,7 +67,7 @@ div.tooltip2 {
     position: absolute;     
     /*text-align: center;*/     
     width: 120px;          
-    height: 56px;        
+/*    height: 56px;        */
     padding: 2px;       
     font: 10px noto;    
     background: lightsteelblue; 
